# DigitDetectANN

./: .gitignore  README.md
implementation/: CMakeLists.txt  main.cpp
testing/: CMakeLists.txt  main.cpp
training/: CMakeLists.txt  main.cpp
